# glancer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: BaseFrame.h  BasePanel.h  HomePage.h  ImagePage.h  MainFrame.h  Utils.h  main.h
src/: BaseFrame.cpp  CMakeLists.txt  HomePage.cpp  ImagePage.cpp  MainFrame.cpp  Utils.cpp  main.cpp
